Copying over some base settings from the previous version of the project.

--- a/src/styles/cykelpumpar-global-styles.css
+++ b/src/styles/cykelpumpar-global-styles.css
@@ -1,1 +1,6 @@
-@import './cykelpumpar-global-variables.css'
+@import './cykelpumpar-global-variables.css';
+
+body {
+  font-family: var(--default-font);
+  margin: 0;
+}
