Renaming the Advert to display banner, plus every reference.
Because something in the CSS picked up on the banner-ad classname and either blocked it or gave it some other styles from somewhere or other which meant it disappeared!

--- a/src/components/DisplayBanner/displaybanner.module.css
+++ b/src/components/DisplayBanner/displaybanner.module.css
@@ -1,7 +1,7 @@
 .banner {
     background-color: cornflowerblue;
-    height: var(--banner-ad-height);
-    line-height: var(--banner-ad-height);
+    height: var(--display-banner-height);
+    line-height: var(--display-banner-height);
     margin: auto;
     max-width: 360px;
     text-align: center;
