--- a/src/styles/cykelpumpar-global-variables.css
+++ b/src/styles/cykelpumpar-global-variables.css
@@ -4,5 +4,5 @@
 	--primary-contrast: beige;
 	--primary-light: white;
 	--action-bar-height: 60px;
-	--banner-ad-height: 60px;
+	--display-banner-height: 60px;
 }
