Adding the Action Bar (menu)

--- a/src/templates/cyclepump.module.css
+++ b/src/templates/cyclepump.module.css
@@ -4,6 +4,12 @@
   justify-content: space-around;
 }
 
+.pumpImage{
+  display: block;
+  margin: auto;
+  width: fit-content;
+}
+
 .pumpStatus {
   padding: 0.5em;
 }
