--- a/src/styles/cykelpumpar-global-variables.css
+++ b/src/styles/cykelpumpar-global-variables.css
@@ -4,5 +4,6 @@
 	--primary-contrast: beige;
 	--primary-light: white;
 	--action-bar-height: 60px;
+	--action-bar-back-height: 1.5em;
 	--display-banner-height: 60px;
 }
